--- a/ChromaGAN.ipynb
+++ b/ChromaGAN.ipynb
@@ -29,7 +29,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "zA8bcFbU0-VF",
-        "outputId": "cc40a4de-2dfa-4018-897e-537ca4748fec",
+        "outputId": "9792a8ec-5560-4e68-cf2a-f6278ad9cb43",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -52,7 +52,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "CswEHXhU1YDR",
-        "outputId": "209a8dc3-a196-491c-9f15-19656f4e6e18",
+        "outputId": "446e1742-b395-4018-810b-45fa3560fb00",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -92,13 +92,15 @@
         "from keras.preprocessing.image import load_img\n",
         "from PIL import Image\n",
         "import os\n",
+        "import pickle\n",
         "import random\n",
+        "from skimage.color import gray2rgb\n",
         "import matplotlib.pyplot as plt\n",
         "from keras.callbacks import ModelCheckpoint\n",
         "from keras.applications import VGG16\n",
         "from keras.preprocessing.image import load_img,img_to_array"
       ],
-      "execution_count": 53,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -142,7 +144,7 @@
         "directory = \"/content/gdrive/My Drive/val_256/\"\n",
         "features = extract_features(directory)       "
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -229,7 +231,7 @@
         "pickle.dump(features,f)\n",
         "f.close()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -242,7 +244,7 @@
         "features_new = pickle.load(f_new)\n",
         "f_new.close()"
       ],
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -257,7 +259,7 @@
       "source": [
         "features['Places365_test_00000002.jpg'].shape"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -311,13 +313,14 @@
         "\n",
         "      if (np.array(image).shape==(224,224,3)):\n",
         "        \n",
-        "        gray_image[count] = (np.expand_dims(np.array(image.convert(\"L\")),axis=-1))/255\n",
+        "        gray = (np.array(image.convert(\"L\")))\n",
+        "        gray_image[count] = gray2rgb(gray)\n",
         "        color_image[count] = np.array(image)/255\n",
         "        VGG16_target[count] = self.features[filename]\n",
         "\n",
         "    return gray_image,color_image,VGG16_target    "
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -347,28 +350,44 @@
         "  X = LeakyReLU(alpha=0.2)(X)\n",
         "\n",
         "  X = Conv2D(filters=1,kernel_size=(4,4),strides=(1,1),padding='same')(X)\n",
-        "  X = BatchNormalization(axis=-1)(X)\n",
-        "  X = LeakyReLU(alpha=-1)(X)\n",
-        "\n",
+        " \n",
         "  model = Model(inputs=input_img,outputs=X)\n",
         "\n",
         "  return model\n"
       ],
-      "execution_count": 105,
+      "execution_count": 12,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FgukDnq_8Uv0"
+        "id": "FgukDnq_8Uv0",
+        "outputId": "bda140b4-1d29-4174-a8e4-311650f833e9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         " VGG16model = VGG16(include_top=False,weights=\"imagenet\",classes=1000)\n",
-        " for layer in VGG16model.layers:\n",
-        "   layer.trainable = False"
+        " #for layer in VGG16model.layers:\n",
+        "  # layer.trainable = False"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "WARNING:tensorflow:From /tensorflow-1.15.2/python3.6/tensorflow_core/python/ops/resource_variable_ops.py:1630: calling BaseResourceVariable.__init__ (from tensorflow.python.ops.resource_variable_ops) with constraint is deprecated and will be removed in a future version.\n",
+            "Instructions for updating:\n",
+            "If using Keras pass *_constraint arguments to layers.\n",
+            "WARNING:tensorflow:From /tensorflow-1.15.2/python3.6/keras/backend/tensorflow_backend.py:4070: The name tf.nn.max_pool is deprecated. Please use tf.nn.max_pool2d instead.\n",
+            "\n",
+            "Downloading data from https://github.com/fchollet/deep-learning-models/releases/download/v0.1/vgg16_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
+            "58892288/58889256 [==============================] - 1s 0us/step\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -381,7 +400,7 @@
         "  input_img = Input(shape=img_shape)\n",
         "  X = input_img\n",
         "\n",
-        "  for layer in VGG16model.layers[:-6]:\n",
+        "  for layer in VGG16model.layers[1:-6]:\n",
         "    X = layer(X)\n",
         "  \n",
         "  VGG16_output = X \n",
@@ -440,7 +459,7 @@
         "\n",
         "  return model"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -456,7 +475,7 @@
         "  model = Model(inputs=X,outputs=[image,color_distribution,output])\n",
         "  return model"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -467,7 +486,7 @@
       "source": [
         "chromaGAN = chromaGAN((224,224,3),patch_discriminator,generator)"
       ],
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -489,7 +508,7 @@
         "chromaGAN = chromaGAN((224,224,3),patch_discriminator,generator)\n",
         "chromaGAN.compile(optimizer=opt,loss=[\"mean_squared_error\",'kl','binary_crossentropy'],loss_weights=[0.1,0.003,1])"
       ],
-      "execution_count": 104,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
