--- a/ChromaGAN.ipynb
+++ b/ChromaGAN.ipynb
@@ -92,6 +92,7 @@
         "from keras.preprocessing.image import load_img\n",
         "from PIL import Image\n",
         "import os\n",
+        "import matplotlib.pyplot as plt\n",
         "import pickle\n",
         "import random\n",
         "from skimage.color import gray2rgb\n",
@@ -100,7 +101,7 @@
         "from keras.applications import VGG16\n",
         "from keras.preprocessing.image import load_img,img_to_array"
       ],
-      "execution_count": 6,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -302,7 +303,7 @@
         "\n",
         "    gray_image = np.empty((self.batch_size,*self.dim,self.n_channels))\n",
         "    color_image = np.empty((self.batch_size,*self.dim,self.n_channels))\n",
-        "    VGG16_target = np.empty((self.batch_size,1,1000))\n",
+        "    VGG16_target = np.empty((self.batch_size,1000))\n",
         "    count = 0\n",
         "\n",
         "\n",
@@ -314,13 +315,13 @@
         "      if (np.array(image).shape==(224,224,3)):\n",
         "        \n",
         "        gray = (np.array(image.convert(\"L\")))\n",
-        "        gray_image[count] = gray2rgb(gray)\n",
+        "        gray_image[count] = gray2rgb(gray)/255\n",
         "        color_image[count] = np.array(image)/255\n",
         "        VGG16_target[count] = self.features[filename]\n",
         "\n",
         "    return gray_image,color_image,VGG16_target    "
       ],
-      "execution_count": 9,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -355,7 +356,7 @@
         "\n",
         "  return model\n"
       ],
-      "execution_count": 12,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -459,7 +460,7 @@
         "\n",
         "  return model"
       ],
-      "execution_count": 14,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -475,7 +476,7 @@
         "  model = Model(inputs=X,outputs=[image,color_distribution,output])\n",
         "  return model"
       ],
-      "execution_count": 15,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -492,43 +493,19 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "16z-7oN3Mk20",
-        "outputId": "49a57df6-a5be-48df-e178-96551656180a",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 436
-        }
+        "id": "16z-7oN3Mk20"
       },
       "source": [
-        "opt = Adam(learning_rate=0.00002)\n",
+        "opt = Adam(learning_rate=0.00002,beta_1=0.5,beta_2=0.999)\n",
         "patch_discriminator = patch_discriminator((224,224,3))\n",
-        "patch_discriminator.compile(optimizer=opt,loss='binary_crossentropy')\n",
+        "patch_discriminator.compile(optimizer=opt,loss='binary_crossentropy',loss_weights=[0.1])\n",
         "generator = generator((224,224,3))\n",
         "patch_discriminator.trainable = False\n",
         "chromaGAN = chromaGAN((224,224,3),patch_discriminator,generator)\n",
-        "chromaGAN.compile(optimizer=opt,loss=[\"mean_squared_error\",'kl','binary_crossentropy'],loss_weights=[0.1,0.003,1])"
+        "chromaGAN.compile(optimizer=opt,loss=[\"mean_squared_error\",keras.losses.kullback_leibler_divergence,'binary_crossentropy'],loss_weights=[2,0.003,0.1])"
       ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m/tensorflow-1.15.2/python3.6/keras/engine/base_layer.py\u001b[0m in \u001b[0;36massert_input_compatibility\u001b[0;34m(self, inputs)\u001b[0m\n\u001b[1;32m    309\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 310\u001b[0;31m                 \u001b[0mK\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_keras_tensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    311\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/tensorflow-1.15.2/python3.6/keras/backend/tensorflow_backend.py\u001b[0m in \u001b[0;36mis_keras_tensor\u001b[0;34m(x)\u001b[0m\n\u001b[1;32m    696\u001b[0m         raise ValueError('Unexpectedly found an instance of type `' +\n\u001b[0;32m--> 697\u001b[0;31m                          \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'`. '\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    698\u001b[0m                          'Expected a symbolic tensor instance.')\n",
-            "\u001b[0;31mValueError\u001b[0m: Unexpectedly found an instance of type `<class 'tuple'>`. Expected a symbolic tensor instance.",
-            "\nDuring handling of the above exception, another exception occurred:\n",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-104-20fb52816aa1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mopt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mAdam\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlearning_rate\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.00002\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mpatch_discriminator\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpatch_discriminator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m224\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m224\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mpatch_discriminator\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcompile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moptimizer\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mopt\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mloss\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'binary_crossentropy'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mgenerator\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgenerator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m224\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m224\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mpatch_discriminator\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrainable\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/tensorflow-1.15.2/python3.6/keras/engine/base_layer.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, inputs, **kwargs)\u001b[0m\n\u001b[1;32m    470\u001b[0m             \u001b[0;31m# Raise exceptions in case the input is not compatible\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    471\u001b[0m             \u001b[0;31m# with the input_spec set at build time.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 472\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0massert_input_compatibility\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    473\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    474\u001b[0m             \u001b[0;31m# Handle mask propagation.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/tensorflow-1.15.2/python3.6/keras/engine/base_layer.py\u001b[0m in \u001b[0;36massert_input_compatibility\u001b[0;34m(self, inputs)\u001b[0m\n\u001b[1;32m    314\u001b[0m                                  \u001b[0;34m'Received type: '\u001b[0m \u001b[0;34m+\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    315\u001b[0m                                  \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'. Full input: '\u001b[0m \u001b[0;34m+\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 316\u001b[0;31m                                  \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'. All inputs to the layer '\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    317\u001b[0m                                  'should be tensors.')\n\u001b[1;32m    318\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: Layer model_16 was called with an input that isn't a symbolic tensor. Received type: <class 'tuple'>. Full input: [(224, 224, 3)]. All inputs to the layer should be tensors."
-          ]
-        }
-      ]
+      "execution_count": 26,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -536,7 +513,47 @@
         "id": "OMleCSntUjuE"
       },
       "source": [
-        ""
+        "def summarize_performance(step,generator,gray_images,color_images,name = \"Colorizer\"):\n",
+        "  n_samples = 5\n",
+        "  \n",
+        "\n",
+        "  images = generator.predict(gray_images)\n",
+        "  for i in range(n_samples):\n",
+        "    plt.subplot(3, n_samples, 1 +i)\n",
+        "    plt.axis('off')\n",
+        "    plt.imshow(images[i])\n",
+        "    plt.title(\"Predicted\")\n",
+        "  \n",
+        "  for i in range(n_samples):\n",
+        "    plt.subplot(3, n_samples, 1 + n_samples + i)\n",
+        "    plt.axis('off')\n",
+        "    plt.imshow(gray_images[i])\n",
+        "    plt.title(\"Gray\")\n",
+        "\n",
+        "  for i in range(n_samples):\n",
+        "    plt.subplot(3, n_samples, 1 + 2*n_samples+i)\n",
+        "    plt.axis('off')\n",
+        "    plt.imshow(color_images[i])\n",
+        "    plt.title(\"GT\")\n",
+        "  \n",
+        "\n",
+        "  filename1 = '%s_generated_plot_%06d.png' % (name, (step+1))\n",
+        "  plt.savefig(filename1)\n",
+        "  plt.close()"
+      ],
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XIyYJMjank_o"
+      },
+      "source": [
+        "def train(epochs,generator,discriminator,chromaGAN,batch_size):\n",
+        "  \n",
+        "  directory = \n",
+        "  n_steps = int(len)"
       ],
       "execution_count": null,
       "outputs": []
