--- a/ChromaGAN.ipynb
+++ b/ChromaGAN.ipynb
@@ -95,6 +95,7 @@
         "import matplotlib.pyplot as plt\n",
         "import pickle\n",
         "import random\n",
+        "import progressbar\n",
         "from skimage.color import gray2rgb\n",
         "import matplotlib.pyplot as plt\n",
         "from keras.callbacks import ModelCheckpoint\n",
@@ -291,7 +292,7 @@
         "    self.batch_size=batch_size\n",
         "    self.n_channels = n_channels\n",
         "    self.features = features\n",
-        "    self.epoch_end()\n",
+        "    \n",
         "\n",
         "  def epoch_end(self,filenames):\n",
         "    np.random.shuffle(filenames)\n",
@@ -308,7 +309,7 @@
         "\n",
         "\n",
         "    for filename in batch_filenames:\n",
-        "      image = Image.open(self.directory +\"/\" + filename,target_size=(224,224))\n",
+        "      image = Image.open(self.directory +\"/\" + filename)\n",
         "      image = image.resize((224,224))\n",
         "\n",
         "\n",
@@ -321,7 +322,7 @@
         "\n",
         "    return gray_image,color_image,VGG16_target    "
       ],
-      "execution_count": 21,
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -550,10 +551,91 @@
         "id": "XIyYJMjank_o"
       },
       "source": [
-        "def train(epochs,generator,discriminator,chromaGAN,batch_size):\n",
+        "def train(generator,discriminator,chromaGAN,batch_size,epochs):\n",
         "  \n",
-        "  directory = \n",
-        "  n_steps = int(len)"
+        "  directory = \"/content/gdrive/My Drive/val_256/\"\n",
+        "  n_steps = int(len(os.listdir(directory))/batch_size)\n",
+        "  filenames = os.listdir(directory)\n",
+        "  DataLoader = DataGenerator(features_new,directory,batch_size=batch_size)\n",
+        "\n",
+        "\n",
+        "  for epoch in range(epochs):\n",
+        "    DataLoader.epoch_end(filenames)\n",
+        "    print(\"**********************EPOCH \"+f\"{epoch+1}\" + \" *********************\")\n",
+        "    print(\"\\n\")\n",
+        "\n",
+        "    for step in (range(n_steps)):\n",
+        "\n",
+        "      gray_batch,color_batch,VGG16batch = DataLoader.generate_batch(step,filenames)\n",
+        "      \n",
+        "      idx = np.random.randint(0,n_steps)\n",
+        "      gray_batch_gen,_,_ = DataLoader.generate_batch(idx,filenames)\n",
+        "\n",
+        "      fake_images,_ = generator.predict(x=gray_batch_gen)\n",
+        "      real = np.ones((batch_size,28,28,1))\n",
+        "      fake = np.zeros((batch_size,28,28,1))\n",
+        "\n",
+        "      d_loss1 = discriminator.train_on_batch(x=color_batch,y=real)\n",
+        "      d_loss2 = discriminator.train_on_batch(x=fake_images,y=fake)\n",
+        "      d_loss = [d_loss1,d_loss2]\n",
+        "\n",
+        "      g_loss = chromaGAN.train_on_batch(x=gray_batch,y=[color_batch,VGG16batch,real])\n",
+        "\n",
+        "      if ((step+1)%50==0):\n",
+        "        \n",
+        "        idx1 = np.random.randint(0,n_steps)\n",
+        "        gray_images,color_images,_ = DataGenerator.generate_batch(idx1,filenames)\n",
+        "        summarize_performance(step,generator,gray_images[:5],color_images[:5])\n",
+        "        print(\"Step Number :\",step+1,sep=\"  \")\n",
+        "        print(\"Generator Loss :\",g_loss,sep=\"  \")\n",
+        "        print(\"Discriminator Loss :\",d_loss)\n",
+        "        print(\"\\n\")\n"
+      ],
+      "execution_count": 50,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xKDoqJLKy8pV",
+        "outputId": "ee4df821-0ac0-4caf-e72f-bcfa43c4009a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "train(generator,patch_discriminator,chromaGAN,batch_size=64,epochs=10)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "**********************EPOCH 1 *********************\n",
+            "\n",
+            "\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "/tensorflow-1.15.2/python3.6/keras/engine/training.py:297: UserWarning: Discrepancy between trainable weights and collected trainable weights, did you set `model.trainable` without calling `model.compile` after ?\n",
+            "  'Discrepancy between trainable weights and collected trainable'\n",
+            "/tensorflow-1.15.2/python3.6/keras/engine/training.py:297: UserWarning: Discrepancy between trainable weights and collected trainable weights, did you set `model.trainable` without calling `model.compile` after ?\n",
+            "  'Discrepancy between trainable weights and collected trainable'\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vcneD1RfzVYT"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
