--- a/ChromaGAN.ipynb
+++ b/ChromaGAN.ipynb
@@ -29,7 +29,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "zA8bcFbU0-VF",
-        "outputId": "9792a8ec-5560-4e68-cf2a-f6278ad9cb43",
+        "outputId": "b4dc4187-6e7d-401c-cf57-b88bb55e812b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -52,7 +52,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "CswEHXhU1YDR",
-        "outputId": "446e1742-b395-4018-810b-45fa3560fb00",
+        "outputId": "24096e83-a02f-426e-fd2e-1f217c4d518d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -75,7 +75,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zaoB1Kbu1iXX"
+        "id": "zaoB1Kbu1iXX",
+        "outputId": "22179a0c-9d12-4f97-967e-f2a78f6d9091",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "import tensorflow as tf\n",
@@ -102,8 +106,16 @@
         "from keras.applications import VGG16\n",
         "from keras.preprocessing.image import load_img,img_to_array"
       ],
-      "execution_count": 18,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Using TensorFlow backend.\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -246,36 +258,8 @@
         "features_new = pickle.load(f_new)\n",
         "f_new.close()"
       ],
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "F89VcJ4ME89J",
-        "outputId": "13cba109-d9d1-48b4-acac-50a58b2ed588",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "features['Places365_test_00000002.jpg'].shape"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(1, 1000)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 9
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -322,7 +306,7 @@
         "\n",
         "    return gray_image,color_image,VGG16_target    "
       ],
-      "execution_count": 45,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -357,14 +341,14 @@
         "\n",
         "  return model\n"
       ],
-      "execution_count": 23,
+      "execution_count": 8,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "FgukDnq_8Uv0",
-        "outputId": "bda140b4-1d29-4174-a8e4-311650f833e9",
+        "outputId": "563ae978-c18a-475b-b198-90543bd95358",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -374,7 +358,7 @@
         " #for layer in VGG16model.layers:\n",
         "  # layer.trainable = False"
       ],
-      "execution_count": 11,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -385,7 +369,7 @@
             "WARNING:tensorflow:From /tensorflow-1.15.2/python3.6/keras/backend/tensorflow_backend.py:4070: The name tf.nn.max_pool is deprecated. Please use tf.nn.max_pool2d instead.\n",
             "\n",
             "Downloading data from https://github.com/fchollet/deep-learning-models/releases/download/v0.1/vgg16_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
-            "58892288/58889256 [==============================] - 1s 0us/step\n"
+            "58892288/58889256 [==============================] - 2s 0us/step\n"
           ],
           "name": "stdout"
         }
@@ -461,7 +445,7 @@
         "\n",
         "  return model"
       ],
-      "execution_count": 24,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -477,7 +461,7 @@
         "  model = Model(inputs=X,outputs=[image,color_distribution,output])\n",
         "  return model"
       ],
-      "execution_count": 25,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -505,7 +489,7 @@
         "chromaGAN = chromaGAN((224,224,3),patch_discriminator,generator)\n",
         "chromaGAN.compile(optimizer=opt,loss=[\"mean_squared_error\",keras.losses.kullback_leibler_divergence,'binary_crossentropy'],loss_weights=[2,0.003,0.1])"
       ],
-      "execution_count": 26,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -542,7 +526,7 @@
         "  plt.savefig(filename1)\n",
         "  plt.close()"
       ],
-      "execution_count": 20,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -564,7 +548,7 @@
         "    print(\"**********************EPOCH \"+f\"{epoch+1}\" + \" *********************\")\n",
         "    print(\"\\n\")\n",
         "\n",
-        "    for step in (range(n_steps)):\n",
+        "    for step in progressbar.progressbar(range(n_steps)):\n",
         "\n",
         "      gray_batch,color_batch,VGG16batch = DataLoader.generate_batch(step,filenames)\n",
         "      \n",
@@ -591,23 +575,30 @@
         "        print(\"Discriminator Loss :\",d_loss)\n",
         "        print(\"\\n\")\n"
       ],
-      "execution_count": 50,
+      "execution_count": 17,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "xKDoqJLKy8pV",
-        "outputId": "ee4df821-0ac0-4caf-e72f-bcfa43c4009a",
+        "outputId": "57b00979-32cd-4c73-f62b-18d2c4007c3a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "train(generator,patch_discriminator,chromaGAN,batch_size=64,epochs=10)"
+        "train(generator,patch_discriminator,chromaGAN,batch_size=32,epochs=10)"
       ],
       "execution_count": null,
       "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\r                                                                               \r\rN/A% (0 of 2030) |                       | Elapsed Time: 0:00:00 ETA:  --:--:--"
+          ],
+          "name": "stderr"
+        },
         {
           "output_type": "stream",
           "text": [
@@ -622,8 +613,7 @@
           "text": [
             "/tensorflow-1.15.2/python3.6/keras/engine/training.py:297: UserWarning: Discrepancy between trainable weights and collected trainable weights, did you set `model.trainable` without calling `model.compile` after ?\n",
             "  'Discrepancy between trainable weights and collected trainable'\n",
-            "/tensorflow-1.15.2/python3.6/keras/engine/training.py:297: UserWarning: Discrepancy between trainable weights and collected trainable weights, did you set `model.trainable` without calling `model.compile` after ?\n",
-            "  'Discrepancy between trainable weights and collected trainable'\n"
+            "  0% (2 of 2030) |                       | Elapsed Time: 0:00:36 ETA:  10:05:12"
           ],
           "name": "stderr"
         }
