--- a/ChromaGAN.ipynb
+++ b/ChromaGAN.ipynb
@@ -29,7 +29,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "zA8bcFbU0-VF",
-        "outputId": "b4dc4187-6e7d-401c-cf57-b88bb55e812b",
+        "outputId": "297e3e7b-4c19-4f9a-910a-9758ab4ed515",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -52,7 +52,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "CswEHXhU1YDR",
-        "outputId": "24096e83-a02f-426e-fd2e-1f217c4d518d",
+        "outputId": "13c81383-0e9f-4043-f3cb-5a2af828aa3f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -66,7 +66,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Mounted at /content/gdrive/\n"
+            "Drive already mounted at /content/gdrive/; to attempt to forcibly remount, call drive.mount(\"/content/gdrive/\", force_remount=True).\n"
           ],
           "name": "stdout"
         }
@@ -76,7 +76,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "zaoB1Kbu1iXX",
-        "outputId": "22179a0c-9d12-4f97-967e-f2a78f6d9091",
+        "outputId": "980ad903-27d7-4661-dd2f-cd9c6a84439d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -258,7 +258,7 @@
         "features_new = pickle.load(f_new)\n",
         "f_new.close()"
       ],
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -303,10 +303,11 @@
         "        gray_image[count] = gray2rgb(gray)/255\n",
         "        color_image[count] = np.array(image)/255\n",
         "        VGG16_target[count] = self.features[filename]\n",
+        "        count = count + 1\n",
         "\n",
         "    return gray_image,color_image,VGG16_target    "
       ],
-      "execution_count": 7,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -341,14 +342,14 @@
         "\n",
         "  return model\n"
       ],
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "FgukDnq_8Uv0",
-        "outputId": "563ae978-c18a-475b-b198-90543bd95358",
+        "outputId": "e1d70bb9-2ca9-4f4d-ac05-0d20018a066f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -358,7 +359,7 @@
         " #for layer in VGG16model.layers:\n",
         "  # layer.trainable = False"
       ],
-      "execution_count": 9,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -367,9 +368,7 @@
             "Instructions for updating:\n",
             "If using Keras pass *_constraint arguments to layers.\n",
             "WARNING:tensorflow:From /tensorflow-1.15.2/python3.6/keras/backend/tensorflow_backend.py:4070: The name tf.nn.max_pool is deprecated. Please use tf.nn.max_pool2d instead.\n",
-            "\n",
-            "Downloading data from https://github.com/fchollet/deep-learning-models/releases/download/v0.1/vgg16_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
-            "58892288/58889256 [==============================] - 2s 0us/step\n"
+            "\n"
           ],
           "name": "stdout"
         }
@@ -481,13 +480,13 @@
         "id": "16z-7oN3Mk20"
       },
       "source": [
-        "opt = Adam(learning_rate=0.00002,beta_1=0.5,beta_2=0.999)\n",
+        "opt = Adam(learning_rate=0.00002,beta_1=0.9,beta_2=0.999)\n",
         "patch_discriminator = patch_discriminator((224,224,3))\n",
-        "patch_discriminator.compile(optimizer=opt,loss='binary_crossentropy',loss_weights=[0.1])\n",
+        "patch_discriminator.compile(optimizer=opt,loss='binary_crossentropy',loss_weights=[1])\n",
         "generator = generator((224,224,3))\n",
         "patch_discriminator.trainable = False\n",
         "chromaGAN = chromaGAN((224,224,3),patch_discriminator,generator)\n",
-        "chromaGAN.compile(optimizer=opt,loss=[\"mean_squared_error\",keras.losses.kullback_leibler_divergence,'binary_crossentropy'],loss_weights=[2,0.003,0.1])"
+        "chromaGAN.compile(optimizer=opt,loss=[\"mse\",keras.losses.kullback_leibler_divergence,'binary_crossentropy'],loss_weights=[5,0.003,0.1])"
       ],
       "execution_count": 12,
       "outputs": []
@@ -502,7 +501,7 @@
         "  n_samples = 5\n",
         "  \n",
         "\n",
-        "  images = generator.predict(gray_images)\n",
+        "  images,_ = generator.predict(gray_images)\n",
         "  for i in range(n_samples):\n",
         "    plt.subplot(3, n_samples, 1 +i)\n",
         "    plt.axis('off')\n",
@@ -552,10 +551,10 @@
         "\n",
         "      gray_batch,color_batch,VGG16batch = DataLoader.generate_batch(step,filenames)\n",
         "      \n",
-        "      idx = np.random.randint(0,n_steps)\n",
-        "      gray_batch_gen,_,_ = DataLoader.generate_batch(idx,filenames)\n",
+        "      \n",
+        "      gray_batch_gen,color_batch_gen,VGG16batch_gen = DataLoader.generate_batch(n_steps-step,filenames)\n",
         "\n",
-        "      fake_images,_ = generator.predict(x=gray_batch_gen)\n",
+        "      fake_images,_ = generator.predict(x=gray_batch)\n",
         "      real = np.ones((batch_size,28,28,1))\n",
         "      fake = np.zeros((batch_size,28,28,1))\n",
         "\n",
@@ -563,34 +562,35 @@
         "      d_loss2 = discriminator.train_on_batch(x=fake_images,y=fake)\n",
         "      d_loss = [d_loss1,d_loss2]\n",
         "\n",
-        "      g_loss = chromaGAN.train_on_batch(x=gray_batch,y=[color_batch,VGG16batch,real])\n",
+        "      g_loss = chromaGAN.train_on_batch(x=gray_batch_gen,y=[color_batch_gen,VGG16batch_gen,real])\n",
         "\n",
         "      if ((step+1)%50==0):\n",
         "        \n",
         "        idx1 = np.random.randint(0,n_steps)\n",
-        "        gray_images,color_images,_ = DataGenerator.generate_batch(idx1,filenames)\n",
+        "        gray_images,color_images,_ = DataLoader.generate_batch(idx1,filenames)\n",
         "        summarize_performance(step,generator,gray_images[:5],color_images[:5])\n",
         "        print(\"Step Number :\",step+1,sep=\"  \")\n",
         "        print(\"Generator Loss :\",g_loss,sep=\"  \")\n",
         "        print(\"Discriminator Loss :\",d_loss)\n",
         "        print(\"\\n\")\n"
       ],
-      "execution_count": 17,
+      "execution_count": 14,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "xKDoqJLKy8pV",
-        "outputId": "57b00979-32cd-4c73-f62b-18d2c4007c3a",
+        "outputId": "dd0f4956-bc82-45fe-e0b1-c31c14e40af7",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 640
         }
       },
       "source": [
         "train(generator,patch_discriminator,chromaGAN,batch_size=32,epochs=10)"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -604,7 +604,12 @@
           "text": [
             "**********************EPOCH 1 *********************\n",
             "\n",
-            "\n"
+            "\n",
+            "WARNING:tensorflow:From /tensorflow-1.15.2/python3.6/keras/backend/tensorflow_backend.py:422: The name tf.global_variables is deprecated. Please use tf.compat.v1.global_variables instead.\n",
+            "\n",
+            "WARNING:tensorflow:From /tensorflow-1.15.2/python3.6/tensorflow_core/python/ops/math_grad.py:1424: where (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
+            "Instructions for updating:\n",
+            "Use tf.where in 2.0, which has the same broadcast rule as np.where\n"
           ],
           "name": "stdout"
         },
@@ -613,9 +618,44 @@
           "text": [
             "/tensorflow-1.15.2/python3.6/keras/engine/training.py:297: UserWarning: Discrepancy between trainable weights and collected trainable weights, did you set `model.trainable` without calling `model.compile` after ?\n",
             "  'Discrepancy between trainable weights and collected trainable'\n",
-            "  0% (2 of 2030) |                       | Elapsed Time: 0:00:36 ETA:  10:05:12"
+            "  0% (1 of 2030) |                       | Elapsed Time: 0:00:24 ETA:  13:35:18/tensorflow-1.15.2/python3.6/keras/engine/training.py:297: UserWarning: Discrepancy between trainable weights and collected trainable weights, did you set `model.trainable` without calling `model.compile` after ?\n",
+            "  'Discrepancy between trainable weights and collected trainable'\n",
+            "  2% (50 of 2030) |                      | Elapsed Time: 0:01:37 ETA:   1:48:02"
           ],
           "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "Step Number :  50\n",
+            "Generator Loss :  [0.3759892, 0.007233697, 0.455129, 3.3845532]\n",
+            "Discriminator Loss : [0.5794139, 0.06185101]\n",
+            "\n",
+            "\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "  3% (71 of 2030) |                      | Elapsed Time: 0:02:07 ETA:   0:47:14"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-15-35c291bf924b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgenerator\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mpatch_discriminator\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mchromaGAN\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m32\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mepochs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-14-dd095693b740>\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(generator, discriminator, chromaGAN, batch_size, epochs)\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mstep\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mprogressbar\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprogressbar\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_steps\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m       \u001b[0mgray_batch\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mcolor_batch\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mVGG16batch\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDataLoader\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgenerate_batch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mfilenames\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-5-3078a4da4be9>\u001b[0m in \u001b[0;36mgenerate_batch\u001b[0;34m(self, step_number, filenames)\u001b[0m\n\u001b[1;32m     26\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mfilename\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mbatch_filenames\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m       \u001b[0mimage\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mImage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdirectory\u001b[0m \u001b[0;34m+\u001b[0m\u001b[0;34m\"/\"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mfilename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 28\u001b[0;31m       \u001b[0mimage\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mimage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mresize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m224\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m224\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     29\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/PIL/Image.py\u001b[0m in \u001b[0;36mresize\u001b[0;34m(self, size, resample, box, reducing_gap)\u001b[0m\n\u001b[1;32m   1856\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mim\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconvert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1857\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1858\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1859\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1860\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mreducing_gap\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mresample\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mNEAREST\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/PIL/ImageFile.py\u001b[0m in \u001b[0;36mload\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    249\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    250\u001b[0m                             \u001b[0mb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mb\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 251\u001b[0;31m                             \u001b[0mn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0merr_code\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdecoder\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    252\u001b[0m                             \u001b[0;32mif\u001b[0m \u001b[0mn\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    253\u001b[0m                                 \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+          ]
         }
       ]
     },
